Fixes + removing tracks by name (slash only)